perubahan menu dan cart

--- a/food.html
+++ b/food.html
@@ -14,14 +14,14 @@
         <section id="menu">
             <h2>Menu Makanan</h2>
             <div class="menu-item">
-                <h3>Nasi Goreng</h3>
-                <p>Harga: $10</p>
-                <button onclick="addToCart('Nasi Goreng', 10)">Tambah ke Keranjang</button>
+                <h3>Donburi katsu</h3>
+                <p>Harga: 15.000 Rp</p>
+                <button onclick="addToCart('Donburi katsu', 15.000)">Tambah ke Keranjang</button>
             </div>
             <div class="menu-item">
-                <h3>Mie Goreng</h3>
-                <p>Harga: $8</p>
-                <button onclick="addToCart('Mie Goreng', 8)">Tambah ke Keranjang</button>
+                <h3>Donburi katsu geprek</h3>
+                <p>Harga: 17.000 Rp</p>
+                <button onclick="addToCart('Donburi geprek', 17000)">Tambah ke Keranjang</button>
             </div>
             <!-- Tambahkan lebih banyak item menu di sini -->
         </section>
@@ -29,7 +29,7 @@
         <section id="cart">
             <h2>Keranjang</h2>
             <ul id="cart-items"></ul>
-            <p>Total: $<span id="total-price">0</span></p>
+            <p>Total: Rp<span id="total-price">0</span></p>
             <button onclick="checkout()">Checkout</button>
         </section>
     </main>
